--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "book_app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://StefaniDurovic.github.io/book_app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
